# vanyabotcrm

./: .ai-factory.json  .env.example  .gitignore  AGENTS.md  CLAUDE.md  FUNNELS.md  ISSUES.md  TASK_USER_EVENTS.md  days.md  days_en.md  package.json  pre-deploy.md  reset_test_user.sh  run-bot.sh
.ai-factory/: ARCHITECTURE.md  DESCRIPTION.md  PLAN.md
backend/: package-lock.json  package.json
bot/: .env.example  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
bot/config/: media.yaml  settings.py
bot/scripts/: trigger_funnel.py
bot/src/: bot.py  main.py
bot/src/db/: pool.py  queries.py
bot/src/funnel/: messages.py  scheduler.py  sender.py
bot/src/handlers/: callbacks.py  message.py  payment.py  start.py
bot/src/i18n/: __init__.py  ar.py  en.py  ru.py
bot/src/middlewares/: logging.py  subscription.py
bot/src/models/: user.py  user_data.py
bot/src/services/: ai_agent.py  ai_client.py  ai_food.py  calculator.py  formatter.py  language.py  media.py  ziina.py
bot/tests/: BOT_BEHAVIOR_SUMMARY.md  conftest.py  helpers.py  test_ai_agent.py  test_calculator.py  test_calculator_extended.py  test_callbacks.py  test_callbacks_multilang.py  test_db_integration.py  test_e2e_integration.py  test_formatter.py  test_funnel.py  test_funnel_ar.py  test_funnel_integration.py  test_funnel_simulation.py  test_funnel_timing.py  test_i18n.py  test_kbju_pipeline.py  test_language.py  test_language_selection.py  test_media.py  test_message_handler.py  test_user_data_validation.py  test_user_events.py
crm/: index.html  package-lock.json  package.json  railway.toml  (+5 more)
(+181 files in other folders)
