[project]
name = "vanya-bot"
version = "1.0.0"
description = "Telegram nutrition bot — AI-powered KBJU calculator & sales funnel"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.15",
    "asyncpg>=0.30",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "apscheduler>=3.10",
    "pyyaml>=6.0",
    "openai>=1.50",
    "aiohttp>=3.9",
]

[project.scripts]
vanya-bot = "src.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
